--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,13 @@ pdfplumber==0.11.8
 pillow==12.0.0
 pycparser==2.23
 pypdfium2==5.2.0
+pyperclip==1.11.0
 PySocks==1.7.1
 python-anticaptcha==1.0.0
 python-dotenv==1.2.1
 requests==2.32.5
 selenium==4.39.0
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
