--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,12 @@ certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 cryptography==46.0.3
+google-api-core==2.28.1
+google-api-python-client==2.187.0
 google-auth==2.41.1
+google-auth-httplib2==0.3.0
 google-auth-oauthlib==1.2.3
+googleapis-common-protos==1.72.0
 gspread==6.2.1
 h11==0.16.0
 httplib2==0.31.0
@@ -18,6 +22,8 @@ packaging==25.0
 pdfminer.six==20251107
 pdfplumber==0.11.8
 pillow==12.0.0
+proto-plus==1.27.0
+protobuf==6.33.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
@@ -39,6 +45,7 @@ sortedcontainers==2.4.0
 trio==0.32.0
 trio-websocket==0.12.2
 typing_extensions==4.15.0
+uritemplate==4.2.0
 urllib3==2.6.2
 webdriver-manager==4.0.2
 websocket-client==1.9.0
